test/chainsaw/authpolicy/enforce_resource_indicators/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  wellKnownURI: https://test.idporten.no/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
